edited css but button bot completed yet

--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
                     <img src="./images/about-me.png">
                 </div>
                 <div class="about-col-2">
-                    <h1 class="sub-title" id="about-me-header">About Me</h1>
+                    <h1 style="text-align: center;" class="sub-title" id="about-me-header">About Me</h1>
                     <div class="about-text">
                         <div></div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam molestias quo debitis
