--- a/blog.html
+++ b/blog.html
@@ -34,9 +34,99 @@
 
     <section id="blog">
         <div class="blog-container">
+
+            <div class="blog-box">
+                <div class="blog-img">
+                    <img src="./images/bgc-10.jpg" alt="">
+                </div>
+                <div class="blog-text">
+                    <span>5-2 Feb 2024 / Web design and application</span>
+                    <a href="#" class="blog-title">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci
+                        tenetur maiores
+                        delectus </a>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione dolor debitis, velit nisi et,
+                        necessitatibus ducimus sunt recusandae voluptate alias neque enim error ab, possimus odit animi
+                        maxime nam deleniti!Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione dolor
+                        debitis, velit nisi et, necessitatibus ducimus sunt recusandae voluptate alias neque enim error
+                        ab,
+                        possimus odit animi maxime nam deleniti!
+                    </p>
+
+                    <b class="read-more">Read More</b><br>
+                    <span class="read-little">Read Little</span>
+                </div>
+            </div>
             <div class="blog-box">
                 <div class="blog-img">
                     <img src="./images/bgc-3.png" alt="">
+                </div>
+                <div class="blog-text">
+                    <span>5-2 Feb 2024 / Web design and application</span>
+                    <a href="#" class="blog-title">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci
+                        tenetur maiores
+                        delectus </a>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione dolor debitis, velit nisi et,
+                        necessitatibus ducimus sunt recusandae voluptate alias neque enim error ab, possimus odit animi
+                        maxime nam deleniti!Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione dolor
+                        debitis, velit nisi et, necessitatibus ducimus sunt recusandae voluptate alias neque enim error
+                        ab,
+                        possimus odit animi maxime nam deleniti!
+                    </p>
+
+                    <b class="read-more">Read More</b><br>
+                    <span class="read-little">Read Little</span>
+                </div>
+            </div>
+
+            <div class="blog-box">
+                <div class="blog-img">
+                    <img src="./images/bgc-11.png" alt="">
+                </div>
+                <div class="blog-text">
+                    <span>5-2 Feb 2024 / Web design and application</span>
+                    <a href="#" class="blog-title">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci
+                        tenetur maiores
+                        delectus </a>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione dolor debitis, velit nisi et,
+                        necessitatibus ducimus sunt recusandae voluptate alias neque enim error ab, possimus odit animi
+                        maxime nam deleniti!Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione dolor
+                        debitis, velit nisi et, necessitatibus ducimus sunt recusandae voluptate alias neque enim error
+                        ab,
+                        possimus odit animi maxime nam deleniti!
+                    </p>
+
+                    <b class="read-more">Read More</b><br>
+                    <span class="read-little">Read Little</span>
+                </div>
+            </div>
+            <div class="blog-box">
+                <div class="blog-img">
+                    <img src="./images/bgc-12.png" alt="">
+                </div>
+                <div class="blog-text">
+                    <span>5-2 Feb 2024 / Web design and application</span>
+                    <a href="#" class="blog-title">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci
+                        tenetur maiores
+                        delectus </a>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione dolor debitis, velit nisi et,
+                        necessitatibus ducimus sunt recusandae voluptate alias neque enim error ab, possimus odit animi
+                        maxime nam deleniti!Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione dolor
+                        debitis, velit nisi et, necessitatibus ducimus sunt recusandae voluptate alias neque enim error
+                        ab,
+                        possimus odit animi maxime nam deleniti!
+                    </p>
+
+                    <b class="read-more">Read More</b><br>
+                    <span class="read-little">Read Little</span>
+                </div>
+            </div>
+            <div class="blog-box">
+                <div class="blog-img">
+                    <img src="./images/bgc-8.png" alt="">
                 </div>
                 <div class="blog-text">
                     <span>5-2 Feb 2024 / Web design and application</span>
@@ -132,26 +222,7 @@
                     <span class="read-little">Read Little</span>
                 </div>
             </div>
-            <div class="blog-box">
-                <div class="blog-img">
-                    <img width="500" src="./images/bgc-7.png" alt="">
-                </div>
-                <div class="blog-text">
-                    <span>5-2 Feb 2024 / Web design and application</span>
-                    <a href="#" class="blog-title">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci
-                        tenetur maiores
-                        delectus </a>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione dolor debitis, velit nisi et,
-                        necessitatibus ducimus sunt recusandae voluptate alias neque enim error ab, possimus odit animi
-                        maxime nam deleniti!
-                    </p>
 
-                    <b class="read-more">Read More</b><br>
-                    <span class="read-little">Read Little</span>
-                </div>
-            </div>
-        </div>
     </section>
 
     <script>
