--- a/skill.html
+++ b/skill.html
@@ -133,6 +133,18 @@
 
     </section>
 
+    <script>
+        var sidemenu = document.getElementById("sidemenu");
+
+        function openmenu() {
+            sidemenu.style.right = "0";
+        }
+        function closemenu() {
+            sidemenu.style.right = "-1500px"
+        }
+
+
+    </script>
 </body>
 
 </html>
