--- a/duty.html
+++ b/duty.html
@@ -27,6 +27,8 @@
     <div class="duty">
         <div>
             <h1>all - Fontsize</h1>
+            <h1>Scdelue Table</h1>
+            <h1>Iframe youtube tutior </h1>
             <h1>Button</h1>
             <h2> navbar - stlye</h2>
             <h2> index - content/css/responsive/Quotes/typedJS </h2>
