--- a/about.html
+++ b/about.html
@@ -23,35 +23,30 @@
         <img src="./images/logo.png" class="logo">
         <ul id="sidemenu">
             <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="skill.html">Skill</a></li>
             <li><a href="blog.html">Blog</a></li>
-            <li><a href="skill.html">skill</a></li>
             <li><a href="contact.html">Contact</a></li>
             <i class="fas fa-sharp fa-solid fa-xmark" onclick="closemenu()"></i>
         </ul>
         <i class="fas fa-solid fa-bars" onclick="openmenu()"></i>
     </nav>
     <!------------------------------------about----------------------------------->
-    <div id="about">
+    <section id="about">
+        <h1 style="text-align: center;" class="sub-title">About Me</h1>
+
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
+                    <div class="tab-titles">
+                        <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
+                        <p class="tab-links" onclick="opentab('experience')">Experience</p>
+                        <p class="tab-links" onclick="opentab('education')">Education</p>
+                    </div>
                     <img src="./images/about-me.png">
                 </div>
                 <div class="about-col-2">
-                    <h1 style="text-align: center;" class="sub-title" id="about-me-header">About Me</h1>
-                    <div class="about-text">
-                        <div></div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam molestias quo debitis
-                            velit.
-                            Minus, error? Dolore et exercitationem, autem cumque ipsa aperiam quod, laboriosam voluptas
-                            aliquid, illo voluptatibus assumenda unde!</p>
-                    </div>
                     <div class="tab">
-                        <div class="tab-titles">
-                            <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
-                            <p class="tab-links" onclick="opentab('experience')">Experience</p>
-                            <p class="tab-links" onclick="opentab('education')">Education</p>
-                        </div>
                         <div class="tab-contents active-tab" id="skills">
                             <ul>
                                 <li>
@@ -110,12 +105,19 @@
                             </ul>
                         </div>
                     </div>
-                    <a href="./blog.html" class="btn btn2">Discover more</a>
+                    <div id="all-btn">
+                        <a class="button">
+                            <svg height="50" width="200">
+                                <rect class="shape" height="50" width="200" />
+                                <div class="text">View More</div>
+                            </svg>
+                        </a>         
+                    </div>
                 </div>
             </div>
         </div>
 
-    </div>
+    </section>
 
 
     <script>
@@ -135,7 +137,6 @@
         }
 
     </script>
-
     <script>
 
         var sidemenu = document.getElementById("sidemenu");
@@ -148,6 +149,7 @@
         }
 
     </script>
+
 
 
 </body>
