Add cal to contact,html & remove cal.html+css

--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
                             <p>Hello! I'M </p>
                             <h1>Eddy CHAN</h1>
                             <p>And I'm</p>
-                            <span class="multiple-text">Animal lover</span>
+                            <div>
+                                <span class="multiple-text">Animal lover</span>
+                            </div>
                         </div>
 
                         <div id="all-btn">
