--- a/contact.html
+++ b/contact.html
@@ -40,19 +40,72 @@
                     <h1 class="sub-title">Contact Me</h1>
                     <p><i class="fa-solid fa-envelope"></i>22026266d@connect.polyu.hk</p>
                     <p><i class="fa-solid fa-phone"></i> (852) 9716 6524</p>
-                    <div class="social-icons">
-                        <a href=""><i class="fa-brands fa-square-facebook"></i></a>
-                        <a href=""><i class="fa-brands fa-linkedin"></i></i></a>
-                        <a href=""><i class="fa-brands fa-square-instagram"></i></i></a>
-                    </div>
+
+                    <section id="cal">
+                        <div class="container">
+                            <div class="date">
+                                <div class="days">
+                                    <h3>Schedule: Feb 2024</h3>
+                                    <div class="day">Su</div>
+                                    <div class="day">Mo</div>
+                                    <div class="day">Tu</div>
+                                    <div class="day">We</div>
+                                    <div class="day">Th</div>
+                                    <div class="day">Fr</div>
+                                    <div class="day">Sa</div>
+
+                                    <div class="number-pre pt">28</div>
+                                    <div class="number-pre intern">29</div>
+                                    <div class="number-pre study">30</div>
+                                    <div class="number-pre study">31</div>
+                                    <div class="number study">1</div>
+                                    <div class="number">2</div>
+                                    <div class="number pt">3</div>
+                                    <div class="number pt">4</div>
+                                    <div class="number">5</div>
+                                    <div class="number study">6</div>
+                                    <div class="number study">7</div>
+                                    <div class="number study">8</div>
+                                    <div class="number intern">9</div>
+                                    <div class="number pt">10</div>
+                                    <div class="number pt">11</div>
+                                    <div class="number">12</div>
+                                    <div class="number">13</div>
+                                    <div class="number">14</div>
+                                    <div class="number intern">15</div>
+                                    <div class="number intern">16</div>
+                                    <div class="number pt">17</div>
+                                    <div class="number pt">18</div>
+                                    <div class="number">19</div>
+                                    <div class="number study">20</div>
+                                    <div class="number study">21</div>
+                                    <div class="number study">22</div>
+                                    <div class="number intern">23</div>
+                                    <div class="number pt">24</div>
+                                    <div class="number pt">25</div>
+                                    <div class="number intern">26</div>
+                                    <div class="number study">27</div>
+                                    <div class="number study">28</div>
+                                    <div class="number study">29</div>
+                                    <div class="number-pre">1</div>
+                                    <div class="number-pre pt">2</div>
+
+                                    <div class="number-bgc intern">Intern</div>
+                                    <div class="number-bgc pt">Pt</div>
+                                    <div class="number-bgc study">study</div>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+
 
                 </div>
                 <div class="contact-right">
 
                     <form name="submit-to-google-sheet">
-                        <input type="text" name="Name" placeholder="Enter Your Name..." required>
-                        <input type="email" name="Email" placeholder="Enter Your Email..." required>
-                        <textarea name="Message" rows="3" placeholder="Enter Your Message..."></textarea>
+                        <input type="text" name="Name" placeholder="Enter Your Name Here..." required>
+                        <input type="email" name="Email" placeholder="Enter Your Email Here..." required>
+                        <textarea name="Message" rows="3" placeholder="Enter Your Message Here..."></textarea>
                         <button type="submit" class="btn btn2">SEND MESSAGE</button>
                     </form>
 
