Edited contact.html& background blur

--- a/blog.html
+++ b/blog.html
@@ -37,26 +37,27 @@
 
             <div class="blog-box">
                 <div class="blog-img">
-                    <img src="./images/bgc-10.jpg" alt="">
+                    <img src="./images/bgc-10.jpg" alt="classroom background image">
                 </div>
                 <div class="blog-text">
-                    <span>5-2 Feb 2024 / Web design and application</span>
-                    <a href="#" class="blog-title">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci
-                        tenetur maiores
-                        delectus </a>
+                    <span>5-2 Feb 2024 / Scratch Programming for Kids</span>
+                    <a href="#" class="blog-title">Introducing Primary Students to the World of Coding with Scratch</a>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione dolor debitis, velit nisi et,
-                        necessitatibus ducimus sunt recusandae voluptate alias neque enim error ab, possimus odit animi
-                        maxime nam deleniti!Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione dolor
-                        debitis, velit nisi et, necessitatibus ducimus sunt recusandae voluptate alias neque enim error
-                        ab,
-                        possimus odit animi maxime nam deleniti!
+                        This week, our young learners took their first steps into the world of programming through
+                        Scratch. Scratch is a visual programming language developed by MIT that makes it fun and easy
+                        for kids to create their own interactive stories, games, and animations.
+                        Our students learned to think creatively, work collaboratively, and reason systematically. The
+                        highlight was seeing the students bring their imaginations to life, designing characters and
+                        directing them through mazes of their own creation. Their excitement was palpable as they shared
+                        their projects with the class.
                     </p>
 
                     <b class="read-more">Read More</b><br>
-                    <span class="read-little">Read Little</span>
+                    <span class="read-little">Read Less</span>
                 </div>
             </div>
+
+
             <div class="blog-box">
                 <div class="blog-img">
                     <img src="./images/bgc-6.png" alt="">
