--- a/duty.html
+++ b/duty.html
@@ -34,8 +34,8 @@
             <h2> index - content/css/responsive/Quotes/typedJS </h2>
             <h2> about - content/css/responsive/typedJS </h2>
             <h2> blog - shadow </h2>
-            <h2 skill - Completed </p>
-                <h2> contact - Completed</h2>
+            <h2>skill - Completed </h2>
+            <h2> contact - Completed</h2>
 
         </div>
     </div>
