--- a/about.html
+++ b/about.html
@@ -64,28 +64,56 @@
                                 </li>
                                 <li><span>Web Design</span>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In quasi magnam cum
-                                        debitis neque iste laboriosam facere dicta fugit eaque sit architecto, et ut est
-                                        odio quibusdam accusamus. Amet, ullam!</p>
+                                    </p>
                                 </li>
-
                             </ul>
                         </div>
+
                         <div class="tab-contents" id="experience">
                             <ul>
                                 <li>
-                                    <span>2023 - Current</span>
-                                    <p>Web Designer at Autoshop Solutions</p>
+                                    <span>Web Design</span>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In quasi magnam cum
+                                        debitis neque iste laboriosam facere dicta fugit eaque sit architecto, et ut
+                                        est
+                                        odio quibusdam accusamus. Amet, ullam!
+                                    </p>
                                 </li>
-                                <li>
-                                    <span>2023 - Current</span>
-                                    <p>Web Designer at Autoshop Solutions</p>
+                                <li><span>Web Design</span>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In quasi magnam cum
+                                        debitis neque iste laboriosam facere dicta fugit eaque sit architecto, et ut est
+                                        odio quibusdam accusamus. Amet, ullam!</p>
                                 </li>
-                                <li>
-                                    <span>2023 - Current</span>
-                                    <p>Web Designer at Autoshop Solutions</p>
+                                <li><span>Web Design</span>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In quasi magnam cum
+                                        debitis neque iste laboriosam facere dicta fugit eaque sit architecto, et ut est
+                                        odio quibusdam accusamus. Amet, ullam!</p>
                                 </li>
                             </ul>
                         </div>
+
+
+
+                        <div class="tab-contents" id="education">
+                            <ul>
+                                <li>
+                                    <span>2023</span>
+                                    <p>Associate in UX Desig
+                                    </p>
+                                </li>
+                                <li>
+                                    <span>2023</span>
+                                    <p>Associate in UX Desig
+                                    </p>
+                                </li>
+                                <li>
+                                    <span>2023</span>
+                                    <p>Associate in UX Desig
+                                    </p>
+                                </li>
+                            </ul>
+                        </div>
+
                         <div class="tab-contents" id="education">
                             <ul>
                                 <li>
