edited anitmation of index

--- a/index.html
+++ b/index.html
@@ -50,9 +50,8 @@
                             <p>Hello! I'M </p>
                             <h1>Eddy CHAN</h1>
                             <p>And I'm</p>
-                            <span class="multiple-text">Animal lover</span>
+                            <span class="multiple-text"></span>
                         </div>
-
                         <div id="all-btn">
                             <a class="button">
                                 <svg height="50" width="200">
@@ -84,7 +83,7 @@
         }
 
         const typed = new Typed('.multiple-text', {
-            strings: ['Animal lover', 'STEM Teaching Assistant at Jockey Club', 'PolyU Computing Student'],
+            strings: ['PolyU Computing Student', 'Animal lover', 'STEM Teaching Assistant at Jockey Club'],
             typeSpeed: 30,
             backSpeed: 30,
             backDelay: 300,
