--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
                         <div class="container">
                             <div class="date">
                                 <div class="days">
-                                    <h3>My Schedule: Feb</h3>
+                                    <h3>Feb</h3>
                                     <div class="day">Su</div>
                                     <div class="day">Mo</div>
                                     <div class="day">Tu</div>
