--- a/about.html
+++ b/about.html
@@ -39,32 +39,23 @@
             <div class="row">
                 <div class="about-col-1">
                     <div class="tab-titles">
-                        <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
+                        <p class="tab-links active-link" onclick="opentab('education')">Education</p>
                         <p class="tab-links" onclick="opentab('experience')">Experience</p>
-                        <p class="tab-links" onclick="opentab('education')">Education</p>
+                        <p class="tab-links" onclick="opentab('skills')">Skills</p>
                     </div>
                     <img src="./images/about-me.png">
                 </div>
                 <div class="about-col-2">
                     <div class="tab">
-                        <div class="tab-contents active-tab" id="skills">
+                        <div class="tab-contents active-tab" id="education">
                             <ul>
                                 <li>
-                                    <span>Web Design</span>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In quasi magnam cum
-                                        debitis neque iste laboriosam facere dicta fugit eaque sit architecto, et ut
-                                        est
-                                        odio quibusdam accusamus. Amet, ullam!
-                                    </p>
+                                    <span>Jul, 2022 - Now</span>
+                                    <p>Computing - The Hong Kong Polytechnic University</p>
                                 </li>
-                                <li><span>Web Design</span>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In quasi magnam cum
-                                        debitis neque iste laboriosam facere dicta fugit eaque sit architecto, et ut est
-                                        odio quibusdam accusamus. Amet, ullam!</p>
-                                </li>
-                                <li><span>Web Design</span>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In quasi magnam cum
-                                    </p>
+                                <li>
+                                    <span>Sep, 2020 - May, 2022 </span>
+                                    <p>Software Enginerring - Hong Kong Institute Vocational Education</p>
                                 </li>
                             </ul>
                         </div>
@@ -72,6 +63,33 @@
                         <div class="tab-contents" id="experience">
                             <ul>
                                 <li>
+                                    <span>Jan, 2023 - Dec, 2023</span>
+                                    <p class="job-title">IT Intern - China Moblie </p>
+                                    <p>
+                                        Creating and managing web applications using React, PHP, Node.js, and MySQL /
+                                        Securely retrieve and provide confidential customer information in response to
+                                        internal employee requests from the database.
+                                    </p>
+                                </li>
+                                <li><span>Jul, 2022- Aug, 2022</span>
+                                    <p class="job-title">IT Support - W Hotel Jul</p>
+                                    <p>Managing the IT environment within the hotel / Assisting colleagues with setting
+                                        up computers, Outlook, printers, and other related equipment.</p>
+                                </li>
+                                <li><span>July, 2021 - Aug, 2021</span>
+                                    <p class="job-title">STEM Teaching Associate - Youth Group
+                                        Jockey Club</p>
+                                    <p>Preparing IT / STEM Teaching materials / Student Mentoring/Workshop Facilitation
+                                    </p>
+                                </li>
+                            </ul>
+
+                        </div>
+
+
+                        <div class="tab-contents" id="skills">
+                            <ul>
+                                <li>
                                     <span>Web Design</span>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In quasi magnam cum
                                         debitis neque iste laboriosam facere dicta fugit eaque sit architecto, et ut
@@ -86,52 +104,11 @@
                                 </li>
                                 <li><span>Web Design</span>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In quasi magnam cum
-                                        debitis neque iste laboriosam facere dicta fugit eaque sit architecto, et ut est
-                                        odio quibusdam accusamus. Amet, ullam!</p>
-                                </li>
-                            </ul>
-                        </div>
-
-
-
-                        <div class="tab-contents" id="education">
-                            <ul>
-                                <li>
-                                    <span>2023</span>
-                                    <p>Associate in UX Desig
-                                    </p>
-                                </li>
-                                <li>
-                                    <span>2023</span>
-                                    <p>Associate in UX Desig
-                                    </p>
-                                </li>
-                                <li>
-                                    <span>2023</span>
-                                    <p>Associate in UX Desig
                                     </p>
                                 </li>
                             </ul>
                         </div>
 
-                        <div class="tab-contents" id="education">
-                            <ul>
-                                <li>
-                                    <span>2023</span>
-                                    <p>Associate in UX Design</p>
-                                </li>
-                                <li>
-                                    <span>2023</span>
-                                    <p>Associate in Web Design</p>
-                                </li>
-
-                                <li>
-                                    <span>2017</span>
-                                    <p>Associate in Business Administration</p>
-                                </li>
-
-                            </ul>
-                        </div>
                     </div>
                     <div id="all-btn">
                         <a class="button">
